# pubTools

./: .pdm-python  pyproject.toml
pubTools/: plastex.py
scripts/: installEditableCommands
